--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "preentrega-coder",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
-  }
+    "express": "^4.19.2",
+    "express-handlebars": "^8.0.1",
+    "socket.io": "^4.7.5"
+  },
+  "description": ""
 }
